EES-5950 Fix button overlap issue by wrapping buttons in ButtonGroup

--- a/src/explore-education-statistics-admin/src/pages/release/data/components/ReleaseDataReorderSection.module.scss
+++ b/src/explore-education-statistics-admin/src/pages/release/data/components/ReleaseDataReorderSection.module.scss
@@ -3,3 +3,9 @@
 .table td {
   vertical-align: middle;
 }
+
+.tableCellButtons {
+  --verticalSpacing: #{govuk-spacing(1)};
+  justify-content: flex-end;
+  margin-bottom: 0;
+}
